--- a/MvcDeployment/Views/Home/Index.cshtml
+++ b/MvcDeployment/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <h3 class="text-secondary">
         @ViewData["SALUDO"]
     </h3>
-    <img src="~/images/batman.png" width="150" height="150" />
+    <img src="~/images/superman.png" width="150" height="150" />
 
     <ul class="list-group">
         @foreach (int num in Model)
